cluster/simple-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-deployment
  labels:
    app: simple-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
        - name: simple-server
          image: volnenko/simple-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-server-service
spec:
  type: NodePort
  selector:
    app: simple-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
