cluster/ingress-virtual-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-virtual-hosts
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:   
  - host: pma.master.kubernetes.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  - host: simple.master.kubernetes.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: simple-service
            port:
              number: 80
  - host: tomcat.master.kubernetes.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: tomcat-service
            port:
              number: 80
  - host: time.master.kubernetes.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: time-server-service
            port:
              number: 80
  - host: tomcat.master.k8s.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: tomcat-service
            port:
              number: 80
  - host: time.master.k8s.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: time-server-service
            port:
              number: 80
  - host: pma.master.k8s.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
